[package]
name = "Rust-Crypto"
version = "0.1.0"
authors = ["Deverick <deverick@apollolabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
bytes = "0.4.12"
ndarray = "0.13.0"

[[bin]]
name = "aes_encrypt"
path = "src/main.rs"